--- a/mobx/public/index.html
+++ b/mobx/public/index.html
@@ -22,19 +22,12 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  <div id="app" />
+  <script src="https://fb.me/react-15.3.0.js"></script>
+  <script src="https://fb.me/react-dom-15.3.0.js"></script>
+  <script src="https://npmcdn.com/mobx@2.6.3/lib/mobx.umd.js"></script>
+  <script src="https://npmcdn.com/mobx-react@4.0.3/index.js">
+  </script>
+  <script src="https://npmcdn.com/mobx-react-devtools@4.2.1/index.js">
+  </script>
   </body>
-</html>
